...
      },
    ],
    showStandardsTable: false,
  },
  {
    categoryId: "health",
    name: "Health",
    nameFr: "Santé",
    description:
      "Pathogen and disease risk information for your area. See [CDC Disease Information](https://www.cdc.gov/) for more details.",
    descriptionFr:
      "Informations sur les risques de pathogènes et de maladies pour votre région. Consultez les [informations sur les maladies du CDC](https://www.cdc.gov/) pour plus de détails.",
    icon: "heart",
...
