...

  return (
    <View style={$container}>
      {/* Header Row */}
      <View style={$headerRow}>
        <View style={[$headerCell, $nameCell]}>
          <Text style={$headerText}>Contaminant</Text>
        </View>
        <TouchableOpacity
          style={[$headerCell, $valueCell]}
          onPress={onLocalHeaderPress}
          disabled={!onLocalHeaderPress}
          accessibilityRole="link"
...
